--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,161 @@
-body {
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Roboto', sans-serif;
-}
+:root {--title-color: #212121;
+       --text-color: #757575;
+       --accent-color: #2196F3;}
+body {font-family: 'Roboto', sans-serif; color: var(--title-color);}
+.list {list-style: none;}
+.link {text-decoration: none;}
+
+/* -----HEADER----- */
+.header-logo {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #2196F3;}
+.header-logo-studio {color: #000000;}
+.header-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-color);}
+.header-link:hover,
+.header-link:focus {color: var(--accent-color)}
+.current {color: var(--accent-color);}
+.header-mail:hover,
+.header-mail:focus {color: var(--accent-color)}
+.header-mail {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;}
+.header-phone:hover,
+.header-phone:focus {color: var(--accent-color);}
+.header-phone {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;}
+
+/* -----HERO----- */
+.hero {background-color: #757575;}
+.hero-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;}
+.hero-btn {
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;}
+.hero-btn {background-color: var(--accent-color);}
+
+/* -----ADVANTAGES----- */
+.advantage-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--title-color);}
+.advantage-text {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--text-color);}
+
+/* -----ACTIVITY----- */
+.activity-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.166;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-color);}
+
+/* -----TEAM----- */
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.166;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-color);}
+.worker-name {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.187;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--title-color);}
+.worker-position {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.187;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--text-color);}
+
+/* -----FOOTER----- */
+.footer {background-color: #757575;}
+.footer-logo {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #2196F3;}
+.footer-logo-studio {color: #ffffff;}
+.footer-address-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;}
+.footer-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);}
+
+
+
+/*  ----------PORTFOLIO---------- */
+.filter-btn {
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-color);}
+.filter-btn:hover,
+.filter-btn:focus {color: #ffffff; background-color: var(--accent-color);}
+.portfolio-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--title-color);}
+.portfolio-text {
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+    color: var(--text-color);}
